// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputAdornment should match snapshot 1`] = `
<div>
  <div
    class="MuiInputAdornment-root MuiInputAdornment-positionStart"
  >
    InputAdornment
  </div>
</div>
`;

exports[`InputAdornment should match snapshot 2`] = `
<div>
  <div
    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
  >
    InputAdornment
  </div>
</div>
`;
